[gd_scene load_steps=20 format=2]

[ext_resource path="res://resources/Images/tilemap-characters_packed.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Characters/Player/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/DefaultPlayerMovementData.tres" type="Resource" id=4]
[ext_resource path="res://resources/Audio/PlayerJumpAudio.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/Audio/EnemyHit.mp3" type="AudioStream" id=6]
[ext_resource path="res://resources/Audio/collectcoin-6075.mp3" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 13, 48, 13, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 13, 48, 13, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 13, 48, 13, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 8 ), SubResource( 10 ), SubResource( 8 ), SubResource( 10 ), SubResource( 10 ), SubResource( 8 ), SubResource( 8 ), SubResource( 7 ), SubResource( 7 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ) ],
"loop": true,
"name": "EnemyHit",
"speed": 15.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 9 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
moveData = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "EnemyHit"
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 5 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="PlayerJumpAudio" parent="." instance=ExtResource( 5 )]

[node name="EnemyHitAudio" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 6 )

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="coin_colected" from="." to="." method="_on_Player_coin_colected"]
[connection signal="enemy_hit" from="." to="." method="_on_Player_enemy_hit"]
[connection signal="finish_game" from="." to="." method="_on_Player_finish_game"]
[connection signal="sin_vidas" from="." to="." method="_on_Player_sin_vidas"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="PlayerJumpAudio" to="." method="_on_PlayerJumpAudio_finished"]
[connection signal="finished" from="EnemyHitAudio" to="." method="_on_PlayerJumpAudio_finished"]
